fix: remove scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  overflow: scroll;
-  scrollbar-width: none;
-}
-
-.root::-webkit-scrollbar {
-  display: none;
 }
 
 textarea {
@@ -47,12 +41,6 @@ body {
   font-family: "Roboto";
   transform: scale(1.1);
   transform-origin: 0% 0% 0px;
-  overflow: scroll;
-  scrollbar-width: none;
-}
-
-.root::-webkit-scrollbar {
-  display: none;
 }
 
 h1 {
